--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<title>🐖 🐖 🐖 Pig Party! 🐖 🐖 🐖</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
 		<style>
 			body {
 				color: #444;
@@ -43,10 +42,10 @@
 
 			let model;
 
-			const ldrawPath = 'models/ldraw/officialLibrary/';
+			const ldrawPath = '/';
 
 			const modelFileList = {
-				'Pig': 'models/PigParty.mpd_Packed.mpd',
+				'Pig': 'PigParty.mpd_Packed.mpd',
 			};
 
 			init();
@@ -311,9 +310,14 @@
 				<a href="http://www.ldraw.org"><img style="width: 145px" src="models/ldraw/ldraw_org_logo/Stamp145.png"></a>
 				<br />
 				<a href="http://www.ldraw.org/">This software uses the LDraw Parts Library</a>
-        Made for Kevin by Dad
+        
 			</center>
 		</div>
+    <div style="display: block; position: absolute; bottom: 8px; right: 8px; width: 160px; padding: 10px; background-color: #F3F7F8;">
+      <div> 
+        💚 Made for Kevin by Dad in 2024 💚
+      </div>
+    </div>
 
 	</body>
 </html>
