--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<body>
 		<script type="importmap">
 			{
-				"imports": {
-					"three": "../build/three.module.js",
-					"three/addons/": "./jsm/"
-				}
+			  "imports": {
+				"three": "https://unpkg.com/three@<version>/build/three.module.js",
+				"three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+			  }
 			}
 		</script>
 
