move things again

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
 			let model;
 
-			const ldrawPath = '/';
+			const ldrawPath = '../';
 
 			const modelFileList = {
 				'Pig': 'PigParty.mpd_Packed.mpd',
