--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 	</head>
 
 	<body>
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "../dist/three.module.js",
+					"three/addons/": "./jsm/"
+				}
+			}
+		</script>
 		<script type="module">
 			import * as THREE from 'three';
 
