--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../dist/three.module.js",
+					"three": "../public/three.module.js",
 					"three/addons/": "./jsm/"
 				}
 			}
