--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			const ldrawPath = '/';
 
 			const modelFileList = {
-				'Pig': 'PigParty.mpd_Packed.mpd',
+				'Pig': 'pigparty2.ldr_Packed.mpd',
 			};
 
 			init();
